--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -41,4 +41,5 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            az extension add --name containerapp --upgrade --allow-preview true
             az containerapp update --name backend --resource-group $AZURE_ENV_NAME --source ./src/AlbumBackEnd
