--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - ./src/AlbumBackEnd/*
+      - ./src/AlbumFrontEnd/*
 
 # GitHub Actions workflow to deploy to Azure using azd
 # To configure required secrets for connecting to Azure, simply run `azd pipeline config`
