--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -47,4 +47,4 @@ jobs:
             az account show
             az group show --resource-group $AZURE_ENV_NAME
             az extension add --name containerapp --upgrade --allow-preview true
-            az containerapp up --name backend --location $AZURE_LOCATION --resource-group $AZURE_ENV_NAME --source ./src/AlbumBackEnd
+            az containerapp up --name backend --location $AZURE_LOCATION --resource-group $AZURE_ENV_NAME --ingress internal --source ./src/AlbumBackEnd
